# trace-to-eval-cli

./: .gitignore  AGENTS.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: first-pr.md  product-brief.md
examples/eval-cases/: ttec_demo.json  ttec_smoke.yaml
examples/traces/canonical/: ttec_blocked_vendor.json  ttec_smoke.json  ttec_unsafe_request.json
examples/traces/langgraph/: sample.jsonl
reports/: ttec_v0_1_demo.json  ttec_v0_1_demo.md  ttec_v0_1_smoke.json  ttec_v0_1_smoke.jsonl  ttec_v0_1_smoke.md
schemas/: eval-case.schema.json  run-report.schema.json  trace.schema.json
scripts/: dogfood.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-cli-and-adapters/: design-ledger.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
tests/: test_cli.py  test_runner.py  test_scripts.py
trace_to_eval_cli/: __init__.py  adapters.py  cli.py  io.py  model.py  paths.py  runner.py  scoring.py
