[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-to-eval-cli"
version = "0.1.0"
description = "Local trace format and deterministic eval report CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AthenaTheOwl" }]
dependencies = []

[project.scripts]
trace-to-eval = "trace_to_eval_cli.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["trace_to_eval_cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"

